--- a/block-BJaaiq/code/index.html
+++ b/block-BJaaiq/code/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
-    <title>Document</title>
+    <title>Infinite Scroll</title>
     <!--Stylesheet-->
     <link rel="stylesheet" href="./style.css" />
     <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!--Font Awesome-->
     <script
       src="https://kit.fontawesome.com/5cc6fb9f6b.js"
@@ -19,14 +22,8 @@
     ></script>
   </head>
   <body>
-      <!-- Header -->
-      <header>
-          <h1>Quotes</h1>
-      </header>
-    <!--Main-->
-    <main>
-      <ul class="root"></ul>
-    </main>
+    <h1>Quotes</h1>
+    <ul class="root"></ul>
     <script src="./quotes.js"></script>
     <script src="./script.js"></script>
   </body>
