--- a/block-BJaair/code/index.html
+++ b/block-BJaair/code/index.html
@@ -23,9 +23,36 @@
   </head>
   <body>
     <!--Header-->
-    <header></header>
+    <header>
+      <h1>Notice Cards</h1>
+    </header>
     <!--Main-->
-    <main></main>
+    <main>
+      <ul class="root flex">
+        <!-- <li>
+          <p class="category">Sport</p>
+          <h2 class="title">Basketball</h2>
+        </li> -->
+      </ul>
+
+      <div class="addCard">
+        <form>
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Enter the title..."
+          />
+          <input
+            type="text"
+            id="catagory"
+            name="catagory"
+            placeholder="Enter the catagory..."
+          />
+          <button type="submit">Add New Item</button>
+        </form>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
