--- a/block-BJaait/Todo-List/index.html
+++ b/block-BJaait/Todo-List/index.html
@@ -24,10 +24,26 @@
   <body>
     <!--Header-->
     <header>
-      <h1>Todo List</h1>
+      <div class="container">
+        <h1>Todo List</h1>
+      </div>
     </header>
     <!--Main-->
-    <main></main>
+    <main>
+      <div class="container">
+        <div class="flex input-box">
+          <input
+            type="text"
+            class="input"
+            placeholder="Add your tasks here... "
+          />
+          <div class="add"><i class="fas fa-plus"></i></div>
+        </div>
+      </div>
+      <ul class="container">
+
+      </ul>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
