--- a/block-BJaait/Todo-List/index.html
+++ b/block-BJaait/Todo-List/index.html
@@ -40,9 +40,7 @@
           <div class="add"><i class="fas fa-plus"></i></div>
         </div>
       </div>
-      <ul class="container">
-
-      </ul>
+      <ul class="container"></ul>
     </main>
     <script src="./index.js"></script>
   </body>
