--- a/block-BJaaiw/code/index.html
+++ b/block-BJaaiw/code/index.html
@@ -26,9 +26,10 @@
     <header class="container">
       <h1>Break The Tiles</h1>
     </header>
+
     <!--Main-->
     <main class="container">
-      <canvas></canvas>
+      <canvas id="canvas" width="600" height="400"></canvas>
     </main>
     <script src="./script.js"></script>
   </body>
