--- a/block-BJaajd/code/index.html
+++ b/block-BJaajd/code/index.html
@@ -8,7 +8,10 @@
     />
     <title>Assessment: Inheritance</title>
   </head>
+
   <body>
+    <script src="./calculator.js"></script>
     <script src="./index.js"></script>
   </body>
+  
 </html>
